Refactored styling to clean up some wrapping issues

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -10,7 +10,7 @@ body{
   font-family: 'Montserrat', sans-serif;
   background-color: white;
   overflow: auto;
-  min-height: 87.4vh;
+  min-height: 86vh;
 }
 
 .header {
@@ -22,7 +22,7 @@ body{
 .footer {
   background-color: #0A0908;
   color: #EAE0D5;
-  max-height: 50px;
+  height: 50px;
 }
 
 .header a, .footer a {
